--- a/BusService/src/main/resources/application.properties
+++ b/BusService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9094
 #Drivers for Database
 spring.datasource.url= jdbc:mysql://localhost:3306/axisdb?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=D!vy@n5hu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
